# agent-team-playground

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  start-from-here.md
.claude/: settings.json
.claude/agents/: team.md
.claude/projects/-home-pluto-atom-4-Documents-full-stack-agent-team-playground/memory/: MEMORY.md
.claude/skills/enhance-agent-team/: SKILL.md
.claude/skills/enhance-agent-team/docs/: agent_roles.md  common_tasks.md  phases.md  principles.md  reference.md  troubleshooting.md
.claude/skills/scaffold-project-from-template/: SKILL.md
.claude/skills/scaffold-project-from-template/docs/: api.md  examples.md  setup.md
.github/workflows/: agentic-dev.md
backend/: pyproject.toml
docs/: CONFIGURATION_SUMMARY.md  about-pre-commit-workflow.md
frontend/: package.json
scripts/: rename-and-pr.sh  repo-init.sh
scripts/lib/: common.sh
